# vibe-demo

./: .gitignore  README.md  env.sh
backend/: pyproject.toml
backend/api/: conversations.db  main.py
backend/api/app/: agent.py  constant.py  evaluate.py  graph.py  repository.py  utils.py
backend/api/app/clients/: __init__.py  db.py  vector_store.py
backend/api/app/routers/: analytics.py  auth.py  conversations.py  material.py
backend/subscriber/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthLayout.tsx  Chat.tsx  ChatLayout.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/chat/: Chat.tsx  ChatLayout.tsx
frontend/src/components/insight/: InsightLayout.tsx
frontend/src/components/material/: MaterialLayout.tsx
frontend/src/components/slack/: SlackHistory.tsx  SlackLayout.tsx  SlackSummary.tsx
frontend/src/hooks/: useAuth.ts  useConversation.ts
